src/test/06-Errors/error-super-static.txt
error-super-static.ck:11:9: error: keyword 'super' cannot be used inside static functions
[11]         super.foo();
             ^
error-super-static.ck: ...in function 'void Y.noo()'
